# dotplugs

./: Cargo.toml  README.md
.vim/: coc-settings.json
src/: args.rs  cli.yml  display.rs  git.rs  github.rs  lib.rs  main.rs  repository.rs  subcommand.rs  update_checker.rs
src/git/: branch.rs  fetch.rs  status.rs  update.rs
src/github/: repo_info.rs
src/github/graphql/: repo_info_query.graphql
src/repository/: tpm.rs  util.rs  vim_plug.rs  vim_plug_es.rs  zinit.rs  zplugin.rs
src/repository/util/: git_directory.rs
src/subcommand/: checker.rs  updater.rs  viewer.rs
src/subcommand/viewer/: table_tui.rs
tests/data/: vim_plug.json
