[package]
name = "dotplugs"
version = "0.1.0"
authors = ["Yuta Katayama <yutakatay@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.0"
pretty_env_logger = "0.3"
env_logger = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap =  {version = "2", features = ["yaml"]}
url = "1.7"
git2 = "0.10.1"
failure = "0.1.5"
yaml-rust = "0.3.5"
lazy_static = "1.4"
colored = "1.8"
futures = { version = "0.3.1", features = ["thread-pool"] }
termion = "1.5.3"


