[package]
name = "dotplugs"
version = "0.1.0"
authors = ["Yuta Katayama <yutakatay@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap =  {version = "2", features = ["yaml"]}
url = "2"
git2 = "0.13"
anyhow = "1.0.57"
yaml-rust = "0.3"
lazy_static = "1.4"
colored = "2.0"
futures = { version = "0.3.1", features = ["thread-pool"] }
termion = "1.5.6"
tui = "0.9"
rand = "0.8.5"
prettytable-rs = "^0.8"
graphql_client = "0.10.0"
reqwest = "0.9"
dotenv = "^0.15"
envy = "^0.4"
dirs = "4"
chrono = "0.4"

[dev-dependencies]
boolinator = "2.4.0"
